--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -33,7 +33,7 @@ header>h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 4em;
+    font-size: 10vw;
 
 }
 
@@ -57,7 +57,7 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 2em;
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -73,7 +73,8 @@ section.imagem{
 
 section.imagem>p{
     background-color: rgba(0, 0, 0, 0.233);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 
 }
 
